<resources>
    <string name="app_name">ChatApp</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="have_an_account">Have an Account</string>
    <string name="welcome_to_chat_app">Welcome to Chat App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="submit">Submit</string>
    <string name="enter_your_details_to_log_in">Enter Your Details to Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_the_image_to_change_your_profile_picture">Tap the image to change your profile picture</string>
    <string name="hey_there_i_am_using_chat_app">Hey There! I am using Chat App</string>
    <string name="change_status">Change Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="display_name">Display Name</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="friends_count">Friends Count</string>
    <string name="last_seen">Last Seen</string>
</resources>
