<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:background="@color/colorAccent"
        android:text="@string/have_an_account"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:background="@color/white"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="222dp"
        android:text="@string/welcome_to_chat_app"
        android:textColor="@color/white"
        android:textSize="35dp" />
</RelativeLayout>