<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/pToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/white"></android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="450dp"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/defaultprofile" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="274dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mstatus"
        android:layout_centerHorizontal="true"
        android:text="@string/display_name"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/mstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp"
        android:text="@string/hey_there_i_am_using_chat_app"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <Button
        android:id="@+id/sendRequest"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-126dp"
        android:background="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"
        android:text="@string/friends_count"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/declineReq"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@color/colorAccent"
        android:text="Decline Friend Request"
        android:textColor="@color/white" />


</RelativeLayout>